# codify_bot

./: .env  bot.py  config_reader.py  pyproject.toml
handlers/: entering_registration.py  prompts.py  registration.py  service.py
keyboards/: for_region_choosing.py  for_service_single.py
txts/: kindergarden.json  school.json  university.json
